syntax = "proto3";

package service;

service Service {
  rpc AddService(AddServiceRequest) returns (AddServiceResponse);
  rpc GetServices(Empty) returns (GetServicesResponse); 
  rpc GetService(GetServiceRequest) returns (ServiceMessage); 
  rpc UpdateService(UpdateServiceRequest) returns (AddServiceResponse); 
  rpc DeleteService(GetServiceRequest) returns (AddServiceResponse);
  rpc CreateService (CreateServiceRequest) returns (GetServiceRequest);
  rpc GetJobData (GetServiceRequest) returns (JobData);
  rpc StartJob(GetServiceRequest) returns (AddServiceResponse);
  rpc PaymentSuccess(PaymentSuccessRequest) returns (AddServiceResponse);
  rpc GetExpertDashboard(GetServiceRequest) returns (GetJobsExpertResponse);
  rpc PreviousJobs(GetServiceRequest) returns (PreviousJobsResponse);
  rpc GetServiceData(Empty) returns (GetServiceDataResponse);
  rpc PreviousJobsUser(GetServiceRequest) returns (PreviousJobsResponse);
  rpc GetJobs(Empty) returns (PreviousJobsResponse);
} 

message TopBookedService {
  string serviceId = 1;
  int32 bookingCount = 2;
  string name = 3;
}

message GetServiceDataResponse {
  int32 totalServices = 1;
  double serviceGrowthRate = 2;
  int32 totalJobsCompleted = 3;
  double jobCompletionGrowthRate = 4;
  repeated TopBookedService top5BookedServices = 5;
}

message PreviousJobsResponse {
  repeated JobData jobs = 1;
}

message DailyEarnings {
  int32 _id = 1;
  double dailyEarnings = 2;
  string date = 3;
}

message GetJobsExpertResponse {
  repeated DailyEarnings dailyEarningsCurrentMonth = 1;
  double totalEarnings = 2;
  int32 totalJobs = 3;
  int32 totalCompletedJobs = 4;
  double totalDistance = 5;
  double totalEarningsGrowth = 6;
  double totalJobsGrowth = 7;
  double totalCompletedJobsGrowth = 8;
  double totalDistanceGrowth = 9;
}

message PaymentSuccessRequest {
  string id = 1;
  double amount = 2;
  string paymentType = 3;
}

message UserLocation {
  double lat = 1;   
  double lng = 2;   
}


message JobData {
  string message = 1;         
  string _id = 2;              
  string service = 3;         
  string expertId = 4;         
  string userId = 5;          
  UserLocation userLocation = 6; 
  ExpertLocation expertLocation = 7; 
  string notes = 8;         
  double distance = 9;         
  double totalAmount = 10;    
  double ratePerHour = 11;     
  string status = 12;         
  int32 pin = 13;       
  string payment = 14;   
  string createdAt = 15; 
  string updatedAt = 16; 
}

message Location {
  double lat = 1;
  double lng = 2;
}

message ExpertLocation {
  double latitude = 1;
  double longitude = 2;
}

message CreateServiceRequest {
  string expertId = 1;
  Location userLocation = 2;
  ExpertLocation expertLocation = 3;
  string service = 4;
  string notes = 5;
  double distance = 6;
  string userId = 7;
  int32 totalAmount = 8;
  int32 ratePerHour = 9;
  int32 pin = 10;
}

message Empty {}

message GetServiceRequest {
  string id = 1;
}

message AddServiceRequest {
  string name = 1;
  string description = 2;
  int64 price = 3;
  string serviceImage = 4;
}

message UpdateServiceRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  int64 price = 4;
  string serviceImage = 5;
}

message AddServiceResponse {
  string message = 1;
}

message ServiceMessage {
  string _id = 1;
  string name = 2;
  string description = 3;
  int64 price = 4;
  string serviceImage = 5;
}


message GetServicesResponse {
  repeated ServiceMessage services = 1; 
}
